<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">WetterScoutAI</string>
    <string name="title_activity_main">WetterScoutAI</string>
    <string name="package_name">com.barbecubewetterscoutai.app</string>
    <string name="custom_url_scheme">com.barbecubewetterscoutai.app</string>
    <string name="widget_title">Tagesbericht</string>
    <string name="widget_location_current">Aktueller Standort</string>
    <string name="widget_description">Aktuelle Wetterlage im Tagesbericht-Stil</string>
    <string name="widget_day_today">Heute</string>
    <string name="widget_day_tomorrow">Morgen</string>
    <string name="widget_updated_placeholder">Zuletzt aktualisiert: --:--</string>
    <string name="widget_updated_format">Zuletzt aktualisiert: %1$s</string>
    <string name="widget_refresh_content_description">Widget aktualisieren</string>
    <string name="widget_temp_placeholder">--°</string>
    <string name="widget_weather_icon_placeholder">⛅</string>
    <string name="widget_condition_placeholder">Wetterlage: --</string>
    <string name="widget_condition_tomorrow_placeholder">Morgen: --</string>
    <string name="widget_condition_tomorrow_format">Morgen: %1$s</string>
    <string name="widget_temp_range_placeholder">H: --° • T: --°</string>
    <string name="widget_feels_like_placeholder">Gefühlt: --°</string>
    <string name="widget_forecast_label">Vorhersage</string>
    <string name="widget_metric_minmax_placeholder">↓ --° / ↑ --°</string>
    <string name="widget_metric_minmax_format">↓ %1$s / ↑ %2$s</string>
    <string name="widget_metric_uv_placeholder">UV --</string>
    <string name="widget_metric_wind_placeholder">Wind -- km/h</string>
    <string name="widget_metric_thunder_placeholder">Gewitter: --</string>
    <string name="widget_metric_pollen_placeholder">Pollen: --</string>
    <string name="widget_metric_uv_format">UV %1$s</string>
    <string name="widget_metric_wind_format">Wind %1$s km/h</string>
    <string name="widget_temp_range_format">H: %1$s • T: %2$s</string>
    <string name="widget_feels_like_format">Gefühlt: %1$s</string>
    <string name="widget_metric_thunder_format">Gewitter: %1$s</string>
    <string name="widget_metric_pollen_format">Pollen: %1$s</string>
    <string name="widget_compact_metric_temperature_placeholder">--° --</string>
    <string name="widget_compact_metric_uv_placeholder">UV --</string>
    <string name="widget_compact_metric_thunder_placeholder">⛈ --</string>
    <string name="widget_compact_metric_temperature_format">%1$s %2$s</string>
    <string name="widget_compact_metric_uv_format">UV %1$s</string>
    <string name="widget_compact_metric_thunder_format">⛈ %1$s</string>
    <string name="widget_summary_title_today">Kurztrend</string>
    <string name="widget_summary_title_tomorrow">Tagesausblick</string>
    <string name="widget_summary_placeholder">--</string>
    <string name="widget_summary_today_primary_format">%1$s • Gefühlt %2$s • Pollen %3$s</string>
    <string name="widget_summary_today_secondary_format">%1$s • Regen %2$s mm • Wind %3$s km/h • Gewitter %4$s</string>
    <string name="widget_inline_summary_today_primary_format">%1$s • Gefühlt %2$s</string>
    <string name="widget_inline_rain_title">Regenradar</string>
    <string name="widget_inline_rain_no_rain_symbol">🌧️🚫</string>
    <string name="widget_inline_rain_timing_none">Kein Regen in Sicht</string>
    <string name="widget_inline_rain_timing_start_end_format">Ab %1$s regnet es und in %2$s hört es auf</string>
    <string name="widget_inline_rain_timing_end_format">Es regnet jetzt und in %1$s hört es auf</string>
    <string name="widget_inline_rain_timing_start_only_format">Ab %1$s regnet es</string>
    <string name="widget_inline_rain_timing_now_only">Es regnet jetzt</string>
    <string name="widget_inline_rain_timing_now">jetzt</string>
    <string name="widget_inline_minutes_format_singular">%1$d Minute</string>
    <string name="widget_inline_minutes_format_plural">%1$d Minuten</string>
    <string name="widget_inline_hours_format_singular">%1$d Stunde</string>
    <string name="widget_inline_hours_format_plural">%1$d Stunden</string>
    <string name="widget_inline_hours_minutes_format">%1$d Std. %2$d Min.</string>
    <string name="widget_rain_window_format">Regen %1$s–%2$s</string>
    <string name="widget_summary_tomorrow_primary_format">%1$s • ↓ %2$s / ↑ %3$s</string>
    <string name="widget_summary_tomorrow_secondary_format">Regen %1$s mm • Wind %2$s km/h • UV %3$s</string>
    <string name="widget_weather_clear">Klar</string>
    <string name="widget_weather_partly_cloudy">Leicht bewölkt</string>
    <string name="widget_weather_cloudy">Bedeckt</string>
    <string name="widget_weather_fog">Nebel</string>
    <string name="widget_weather_drizzle">Nieselregen</string>
    <string name="widget_weather_rain">Regen</string>
    <string name="widget_weather_freezing_rain">Gefrierender Regen</string>
    <string name="widget_weather_snow">Schnee</string>
    <string name="widget_weather_thunderstorm">Gewitter</string>
    <string name="widget_weather_unknown">Unbekannt</string>
    <string name="widget_thunder_low">Gering</string>
    <string name="widget_thunder_moderate">Mäßig</string>
    <string name="widget_thunder_high">Hoch</string>
    <string name="widget_pollen_low">Niedrig</string>
    <string name="widget_pollen_moderate">Mittel</string>
    <string name="widget_pollen_high">Hoch</string>
    <string name="widget_pollen_very_high">Sehr hoch</string>
    <string name="widget_metric_unavailable">--</string>
</resources>
